--- a/static/files/index.html
+++ b/static/files/index.html
@@ -1,6 +1,6 @@
 <html ng-app="app" >
 	<head>
-		<title ng-bind="state.Stats.Title">Cloud Torrent</title>
+		<title ng-bind="state.Stats.Title">UP on Reconz</title>
     	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<link rel="stylesheet" type="text/css" href="css/Lato/Lato.css">
 		<link rel="stylesheet" type="text/css" href="css/semantic.min.css">
@@ -21,8 +21,8 @@
 		</div>
 		<!-- TITLE ===================== -->
 		<div class="title">
-			<h2>
-				<a href="https://github.com/jpillora/cloud-torrent"
+			<h2 style="background-color: powderblue;">
+				<a href="https://reconz.herokuapp.com"
 					target="_blank"
 					ng-init="logoHover = false"
 					ng-mouseover="logoHover = true"
